...
        android:id="@+id/Results_RunTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="16dp"
        android:text="@string/run_time"
        app:layout_constraintBottom_toBottomOf="@+id/Results_Genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Results_Genre"
        app:layout_constraintTop_toBottomOf="@+id/Results_ReleaseDate" />

    <TextView
        android:id="@+id/Results_Genre"
...
        android:id="@+id/Results_Reviews"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:text="@string/reviews"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Results_Website" />

    <TextView
        android:id="@+id/Results_Budget"
...
